--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Number of ballots to generate <input id="numBallots" type="number" min="2" value
 <button type="button" id="calculateIRV" onclick="demoIRV()">Simulate a random election</button>
 <div id="IRVresults"></div>
 <div id="IRVballotBlurb"></div>
-<div id="IRVballots"></div>
+<div id="IRVballotDiv"></div>
 
 <script src="index.js" id="src"></script>
 </body>
