--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Voting Systems</title>
-<body onload="onload()">
+<body onload="pageLoaded()">
     <!-- HTML ELEMENTS HERE -->
     <div id="politicalSpectrum" style="white-space:nowrap;">
         <canvas id="politicalSpectrumPlot" width="400" height="400" style="border:1px solid #000000;"></canvas>
